--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="main.js"></script>
 </head>
 <body>
+
+    <div id="weatherBox">Weather Here</div>
     <div>
-        <div id="weatherBox">Weather Here</div>
         <div id="middleText">Welcome to the <span id="location">Grand Canyon</span></div>
-        <button id="foodButton">Click Here to Eat This Location's Food</button>
+        <button id="foodButton" type="button" class="btn btn-success btn-lg">Click Here to Eat This Location's Food</button>
     </div>
 </body>
 </html>
