--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
+    <script src="long_lat.js"></script>
 </head>
 <body>
     <div>
