still working on getting yelp api to get a vaild response

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="locations.js"></script>
 
     <script src="main.js"></script>
-    <script src="long_lat.js"></script>
+    <script src="yelp.js"></script>
 </head>
 <body>
 
