--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"><script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="locations.js"></script>
-
     <script src="main.js"></script>
     <script src="yelp.js"></script>
+    <script src="googleMaps.js"></script>
 </head>
 <body>
 
