--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <script src="googleMaps.js"></script>
 </head>
 <body>
-
-    <div id="weatherBox">Weather Here</div>
-    <div>
+    <!--Weather div is causing site to expand when in mobile size-->
+    <!--<div id="weatherBox">Weather Here</div>-->
+    <div class="col-xs-12 col-md-12 text-center contentDiv">
         <div id="middleText">Welcome to <span id="location"></span></div>
         <button id="foodButton" type="button" class="btn btn-success btn-lg">Click Here to Eat This Location's Food</button>
     </div>
     <div id="result">
-        <div id="yelpResult">YELP</div>
-        <div id="googleMap">GOOGLEMAPS</div>
+        <div id="yelpResult"></div>
+        <div id="googleMap"></div>
     </div>
 </body>
 </html>
