--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div id="firstPage">
             <div id="weatherBox">Weather Here</div>
             <div id="textButton">
-                <div id="middleText">Welcome to <span id="location"></span></div>
-                <button id="foodButton" type="button" class="btn btn-success btn-lg">Click Here to Eat This Location's Food</button>
+                <div class="middleText">Welcome to <span class="location"></span></div>
+                <button class="foodButton" type="button" class="btn btn-success btn-lg">Click Here to Eat This Location's Food</button>
             </div>
             </div>
         </div>
@@ -31,8 +31,8 @@
     <!--Weather div is causing site to expand when in mobile size-->
     <!--<div id="weatherBox">Weather Here</div>-->
     <div class="col-xs-12 col-md-12 text-center contentDiv">
-        <div id="middleText">Welcome to <span id="location"></span></div>
-        <button id="foodButton" type="button" class="btn btn-success btn-lg">Click Here to Eat This Location's Food</button>
+        <div class="middleText">Welcome to <span class="location"></span></div>
+        <button class="foodButton" type="button" class="btn btn-success btn-lg">Click Here to Eat This Location's Food</button>
     </div>
     
 
