--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <div id="mainPage">
         <div id="firstPage">
-            <div id="weatherBox">Weather Here</div>
-            <div id="textButton">
+            <!--<div id="weatherBox">Weather Here</div>-->
+            <div id="textContainer">
                 <div id="middleText">Welcome to <span id="location"></span></div>
                 <button id="foodButton" type="button" class="btn btn-success btn-lg">Click Here to Eat This Location's Food</button>
             </div>
