--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"><script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="locations.js"></script>
-    <script src="main.js"></script>
     <script src="yelp.js"></script>
+    <script src="googleMaps.js"></script>
+    <script src="main.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq2yv9c0yroWGtbqo2o4POs6EDkya8_W4"
             async defer></script>
 </head>
