--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Overpass+Mono" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"><script src="https://code.jquery.com/jquery-3.1.0.js"></script>
@@ -12,6 +13,7 @@
     <script src="yelp.js"></script>
     <script src="googleMaps.js"></script>
     <script src="main.js"></script>
+    <script src="clock.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq2yv9c0yroWGtbqo2o4POs6EDkya8_W4" async defer></script>
 </head>
 <body>
@@ -19,6 +21,7 @@
         <div id="firstPage">
             <!--<div id="weatherBox">Weather Here</div>-->
             <div id="textContainer">
+                <div class="clock"></div>
                 <div id="middleText">Welcome to <span id="location"></span></div>
                 <button id="foodButton" type="button" class="btn btn-success btn-lg">Click Here to Eat This Location's Food</button>
             </div>
