Changed clock position and icons

--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
     <script src="main.js"></script>
     <script src="clock.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq2yv9c0yroWGtbqo2o4POs6EDkya8_W4" async defer></script>
+    <script src="skycons.js"></script>
 </head>
 <body>
     <div id="mainPage">
         <div id="firstPage">
-            <!--<div id="weatherBox">Weather Here</div>-->
             <div id="textContainer">
-                <div class="clock"></div>
                 <div id="middleText">Welcome to <span id="location"></span></div>
                 <button id="foodButton" type="button" class="btn btn-success btn-lg">Click Here to Eat This Location's Food</button>
             </div>
         </div>
+        <div id="weatherBox">
+        </div>
+        <div class="clock"></div>
     </div>
 
 
