centered clock with new changes on css from michael

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                 <button id="foodButton" type="button" class="btn btn-success btn-lg">Click Here to Eat This Location's Food</button>
             </div>
         </div>
-        <div id="weatherBox">
-        </div>
+        <div id="weatherBox"></div>
         <div class="clock"></div>
     </div>
 
