--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="main.js"></script>
     <script src="clock.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq2yv9c0yroWGtbqo2o4POs6EDkya8_W4" async defer></script>
-    <script src="skycons.js"></script>
+    <script src="images/skycons.js"></script>
 </head>
 <body>
     <div id="mainPage">
